[package]
name = "deip_subxt"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
env_logger = "*"
log = "*"
parity-scale-codec = "*"
sp-keyring = "*"
subxt = "*"
tokio = { version = "*", features = ["rt-multi-thread", "fs"] }
futures = "*"
